# StellarSwipe-Contract

.github/: pull_request_template.md
docs/: deployment.md
stellar-swipe/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: errors.rs  lib.rs  storage.rs  test.rs
stellar-swipe/contracts/auto_trade/src/strategies/: mod.rs
stellar-swipe/contracts/bridge/src/: fees.rs  lib.rs  messaging.rs  monitoring.rs
stellar-swipe/contracts/common/src/: lib.rs  replay_protection.rs
stellar-swipe/contracts/fee_collector/: Cargo.toml
stellar-swipe/contracts/fee_collector/src/: analytics.rs  errors.rs  lib.rs  storage.rs  test.rs
stellar-swipe/contracts/oracle/src/: external_adapter.rs  lib.rs  sdex.rs  staleness.rs  storage.rs  types.rs
stellar-swipe/contracts/shared/src/: events.rs
stellar-swipe/contracts/signal_registry/src/: analytics.rs  categories.rs  combos.rs  errors.rs  events.rs  lib.rs  query.rs  reputation.rs  test.rs  test_adoption.rs  test_categories.rs  test_combos.rs  test_contests.rs  types.rs
stellar-swipe/contracts/trade_executor/: Cargo.toml  README.md
stellar-swipe/contracts/trade_executor/src/: errors.rs  lib.rs  test.rs  triggers.rs
stellar-swipe/contracts/user_portfolio/: Cargo.toml
stellar-swipe/contracts/user_portfolio/src/: lib.rs  queries.rs  storage.rs
